Setup almost completed
Added Favicon.

Required (via Composer) Benhall14's PHP-calendar package.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.5",
-        "guzzlehttp/guzzle": "^7.5"
+        "guzzlehttp/guzzle": "^7.5",
+        "benhall14/php-calendar": "^1.4"
     }
 }
