--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
-    "require": {
-        "vlucas/phpdotenv": "^5.5",
-        "guzzlehttp/guzzle": "^7.5",
-        "benhall14/php-calendar": "^1.4"
-    }
+  "require": {
+    "vlucas/phpdotenv": "^5.5",
+    "guzzlehttp/guzzle": "^7.5",
+    "benhall14/php-calendar": "^1.4"
+  },
+  "config": {
+    "platform-check": false
+  }
 }
